--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 Flask==3.0.0
 opencv-python==4.9.0.80
 numpy==1.26.4
+Werkzeug==3.0.1
+click==8.1.7
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+itsdangerous==2.1.2
+pillow==10.2.0
+python-dotenv==1.0.1
+mediapipe
+#pip install -r requirements.txt
